--- a/EzOrder(Cus)/View/Personal/Personal.storyboard
+++ b/EzOrder(Cus)/View/Personal/Personal.storyboard
@@ -342,7 +342,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="0.39581549659999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="imG-au-YPF" firstAttribute="width" secondItem="12s-ih-wtJ" secondAttribute="width" multiplier="2/3" id="A4t-UF-g6Q"/>
                             <constraint firstItem="imG-au-YPF" firstAttribute="centerX" secondItem="tQq-9W-lv5" secondAttribute="centerX" id="wua-4Y-dW6"/>
@@ -971,17 +971,138 @@
                     </view>
                     <connections>
                         <outlet property="foodDetailTableView" destination="xG9-Wj-Non" id="xaE-7d-If2"/>
+                        <segue destination="El2-JZ-1BF" kind="presentation" identifier="rateDishSegue" modalTransitionStyle="crossDissolve" id="AX2-0Z-dnH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JZb-cY-Fqf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3025" y="193"/>
         </scene>
+        <!--Rate Dish View Controller-->
+        <scene sceneID="CL0-Xa-VOb">
+            <objects>
+                <viewController storyboardIdentifier="rateDishVC" modalTransitionStyle="crossDissolve" modalPresentationStyle="overFullScreen" id="El2-JZ-1BF" customClass="RateDishViewController" customModule="EzOrder_Cus_" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="STk-Kn-pfn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vbE-kY-axx">
+                                <rect key="frame" x="37.5" y="198.5" width="300" height="270"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5p5-Yo-QW7">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="新增評論" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i52-4q-H5Y">
+                                                <rect key="frame" x="109" y="13" width="82" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="1" green="0.59670647659999998" blue="0.57797562250000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="EHc-o7-XGR"/>
+                                            <constraint firstItem="i52-4q-H5Y" firstAttribute="centerX" secondItem="5p5-Yo-QW7" secondAttribute="centerX" id="T7y-eL-5vh"/>
+                                            <constraint firstItem="i52-4q-H5Y" firstAttribute="centerY" secondItem="5p5-Yo-QW7" secondAttribute="centerY" id="TaI-B5-qxX"/>
+                                        </constraints>
+                                    </view>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="123" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ONT-k7-nAO">
+                                        <rect key="frame" x="10" y="130.5" width="280" height="85.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="菜色名稱" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IeT-We-fW4">
+                                        <rect key="frame" x="10" y="60" width="69.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rate0" translatesAutoresizingMaskIntoConstraints="NO" id="WsG-8Q-vdd">
+                                        <rect key="frame" x="5" y="90.5" width="150" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="F6N-dF-6nO"/>
+                                            <constraint firstAttribute="width" constant="150" id="meK-98-sfK"/>
+                                        </constraints>
+                                    </imageView>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="5" translatesAutoresizingMaskIntoConstraints="NO" id="hsw-fL-zON" customClass="RateSlider" customModule="EzOrder_Cus_" customModuleProvider="target">
+                                        <rect key="frame" x="3" y="90.5" width="154" height="31"/>
+                                    </slider>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="f5N-xj-h6D">
+                                        <rect key="frame" x="56.5" y="226" width="187.5" height="39"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ywH-JX-HBE">
+                                                <rect key="frame" x="0.0" y="0.0" width="93.5" height="39"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                <state key="normal" title="取消">
+                                                    <color key="titleColor" red="1" green="0.59670647659999998" blue="0.57797562250000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="clickCancel:" destination="El2-JZ-1BF" eventType="touchUpInside" id="eX5-0V-FqH"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f7U-Ng-sNd">
+                                                <rect key="frame" x="93.5" y="0.0" width="94" height="39"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                <state key="normal" title="送出">
+                                                    <color key="titleColor" red="1" green="0.59670647659999998" blue="0.57797562250000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="clickSubmit:" destination="El2-JZ-1BF" eventType="touchUpInside" id="QxU-nr-cjL"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="5p5-Yo-QW7" firstAttribute="leading" secondItem="vbE-kY-axx" secondAttribute="leading" id="0pF-Nh-2i4"/>
+                                    <constraint firstItem="hsw-fL-zON" firstAttribute="bottom" secondItem="WsG-8Q-vdd" secondAttribute="bottom" id="20Z-rR-Ghh"/>
+                                    <constraint firstAttribute="trailing" secondItem="5p5-Yo-QW7" secondAttribute="trailing" id="2xb-jO-2Lj"/>
+                                    <constraint firstItem="WsG-8Q-vdd" firstAttribute="top" secondItem="IeT-We-fW4" secondAttribute="bottom" constant="10" id="BBR-pa-wBs"/>
+                                    <constraint firstItem="5p5-Yo-QW7" firstAttribute="top" secondItem="vbE-kY-axx" secondAttribute="top" id="K1v-R7-9Mh"/>
+                                    <constraint firstItem="ONT-k7-nAO" firstAttribute="top" secondItem="WsG-8Q-vdd" secondAttribute="bottom" constant="10" id="LlV-pt-cAQ"/>
+                                    <constraint firstItem="hsw-fL-zON" firstAttribute="leading" secondItem="WsG-8Q-vdd" secondAttribute="leading" id="PcJ-Lh-iMm"/>
+                                    <constraint firstAttribute="bottom" secondItem="f5N-xj-h6D" secondAttribute="bottom" constant="5" id="QLW-fC-3sy"/>
+                                    <constraint firstItem="hsw-fL-zON" firstAttribute="top" secondItem="WsG-8Q-vdd" secondAttribute="top" id="ZTd-fx-3jC"/>
+                                    <constraint firstItem="ONT-k7-nAO" firstAttribute="leading" secondItem="vbE-kY-axx" secondAttribute="leading" constant="10" id="bOw-yx-Hc5"/>
+                                    <constraint firstItem="IeT-We-fW4" firstAttribute="leading" secondItem="vbE-kY-axx" secondAttribute="leading" constant="10" id="fZD-I9-r3y"/>
+                                    <constraint firstItem="hsw-fL-zON" firstAttribute="trailing" secondItem="WsG-8Q-vdd" secondAttribute="trailing" id="gGG-GF-NMx"/>
+                                    <constraint firstItem="IeT-We-fW4" firstAttribute="top" secondItem="5p5-Yo-QW7" secondAttribute="bottom" constant="10" id="j4B-Q1-YFH"/>
+                                    <constraint firstItem="WsG-8Q-vdd" firstAttribute="leading" secondItem="vbE-kY-axx" secondAttribute="leading" constant="5" id="mID-yM-8rk"/>
+                                    <constraint firstAttribute="trailing" secondItem="ONT-k7-nAO" secondAttribute="trailing" constant="10" id="qM7-d3-sIx"/>
+                                    <constraint firstItem="f5N-xj-h6D" firstAttribute="centerX" secondItem="vbE-kY-axx" secondAttribute="centerX" id="xak-O3-dDd"/>
+                                    <constraint firstItem="f5N-xj-h6D" firstAttribute="top" secondItem="ONT-k7-nAO" secondAttribute="bottom" constant="10" id="yjE-IX-gI7"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.50441459762739727" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="f5N-xj-h6D" firstAttribute="width" secondItem="X6L-0f-1ds" secondAttribute="width" multiplier="1/2" id="YAt-pE-nG6"/>
+                            <constraint firstItem="vbE-kY-axx" firstAttribute="centerX" secondItem="STk-Kn-pfn" secondAttribute="centerX" id="ee6-kQ-E5R"/>
+                            <constraint firstItem="vbE-kY-axx" firstAttribute="width" secondItem="X6L-0f-1ds" secondAttribute="width" multiplier="4/5" id="gxV-jy-6c1"/>
+                            <constraint firstItem="vbE-kY-axx" firstAttribute="centerY" secondItem="STk-Kn-pfn" secondAttribute="centerY" id="l1D-BV-G5p"/>
+                            <constraint firstItem="vbE-kY-axx" firstAttribute="height" secondItem="X6L-0f-1ds" secondAttribute="height" multiplier="5/12" id="z8e-IS-IJp"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="X6L-0f-1ds"/>
+                    </view>
+                    <connections>
+                        <outlet property="commentTextView" destination="ONT-k7-nAO" id="fcf-gk-qNA"/>
+                        <outlet property="dishNameLabel" destination="IeT-We-fW4" id="qy5-DT-8Cp"/>
+                        <outlet property="rateImageView" destination="WsG-8Q-vdd" id="h3d-3t-Rqg"/>
+                        <outlet property="rateSlider" destination="hsw-fL-zON" id="O36-2p-P0E"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="33Z-6d-YS3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4053.5999999999999" y="188.45577211394306"/>
+        </scene>
     </scenes>
     <resources>
         <image name="AD1" width="3500" height="2179"/>
         <image name="ApplePay" width="267" height="267"/>
         <image name="Cash" width="267" height="267"/>
+        <image name="rate0" width="415" height="85.666664123535156"/>
         <image name="客戶端個人" width="27.666666030883789" height="26.333333969116211"/>
         <image name="指針" width="109.66666412353516" height="142.66667175292969"/>
         <image name="真輪盤" width="319.66665649414062" height="320.66665649414062"/>
